[gd_scene load_steps=9 format=3 uid="uid://bqwkwdgwprvdk"]

[ext_resource type="Script" path="res://scripts/environments/Workshop.gd" id="1_workshop_script"]
[ext_resource type="Script" path="res://scripts/player/PlayerController.gd" id="2_player_script"]
[ext_resource type="Script" path="res://scripts/npcs/MasterArtist.gd" id="3_master_script"]
[ext_resource type="Script" path="res://scripts/crafting/PaintCreationStation.gd" id="4_paint_station_script"]
[ext_resource type="Script" path="res://scripts/crafting/CanvasMakingStation.gd" id="5_canvas_station_script"]
[ext_resource type="Script" path="res://scripts/crafting/ArtworkCreationStation.gd" id="6_artwork_station_script"]
[ext_resource type="PackedScene" uid="uid://bvxcvxcvxcvxc" path="res://scenes/ui/MainHUD.tscn" id="7_main_hud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[node name="Workshop" type="Node2D"]
script = ExtResource("1_workshop_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1024.0
offset_bottom = 768.0
color = Color(0.8, 0.7, 0.6, 1)

[node name="WorkshopFloor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = 974.0
offset_bottom = 718.0
color = Color(0.9, 0.8, 0.7, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(180, 400)
script = ExtResource("2_player_script")

[node name="Sprite2D" type="ColorRect" parent="Player"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="InteractionArea" type="Area2D" parent="Player"]

[node name="InteractionShape" type="CollisionShape2D" parent="Player/InteractionArea"]
shape = SubResource("RectangleShape2D_1")

[node name="WorkstationNodes" type="Node2D" parent="."]

[node name="PaintStation" type="StaticBody2D" parent="WorkstationNodes"]
position = Vector2(200, 200)
script = ExtResource("4_paint_station_script")

[node name="PaintStationSprite" type="ColorRect" parent="WorkstationNodes/PaintStation"]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.6, 0.3, 0.2, 1)

[node name="PaintStationCollision" type="CollisionShape2D" parent="WorkstationNodes/PaintStation"]
shape = SubResource("RectangleShape2D_1")

[node name="CanvasStation" type="StaticBody2D" parent="WorkstationNodes"]
position = Vector2(400, 200)
script = ExtResource("5_canvas_station_script")

[node name="CanvasStationSprite" type="ColorRect" parent="WorkstationNodes/CanvasStation"]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.9, 0.9, 0.8, 1)

[node name="CanvasStationCollision" type="CollisionShape2D" parent="WorkstationNodes/CanvasStation"]
shape = SubResource("RectangleShape2D_1")

[node name="ArtworkStation" type="StaticBody2D" parent="WorkstationNodes"]
position = Vector2(600, 200)
script = ExtResource("6_artwork_station_script")

[node name="ArtworkStationSprite" type="ColorRect" parent="WorkstationNodes/ArtworkStation"]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.8, 0.4, 0.6, 1)

[node name="ArtworkStationCollision" type="CollisionShape2D" parent="WorkstationNodes/ArtworkStation"]
shape = SubResource("RectangleShape2D_1")

[node name="ExitDoor" type="StaticBody2D" parent="."]
position = Vector2(100, 400)

[node name="ExitDoorSprite" type="ColorRect" parent="ExitDoor"]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = 40.0
color = Color(0.4, 0.2, 0.1, 1)

[node name="ExitDoorLabel" type="Label" parent="ExitDoor"]
offset_left = -25.0
offset_top = -60.0
offset_right = 25.0
offset_bottom = -40.0
text = "Exit"
horizontal_alignment = 1

[node name="MasterArtist" type="CharacterBody2D" parent="."]
position = Vector2(800, 300)
script = ExtResource("3_master_script")

[node name="MasterSprite" type="ColorRect" parent="MasterArtist"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.8, 0.6, 0.4, 1)

[node name="MasterCollision" type="CollisionShape2D" parent="MasterArtist"]
shape = SubResource("RectangleShape2D_1")

[node name="InteractionArea" type="Area2D" parent="MasterArtist"]

[node name="InteractionShape" type="CollisionShape2D" parent="MasterArtist/InteractionArea"]
shape = SubResource("RectangleShape2D_1")

[node name="MainHUD" parent="." instance=ExtResource("7_main_hud")]

[node name="InteractionPrompt" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
text = "Press E to interact"
horizontal_alignment = 1
vertical_alignment = 1
